--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			Title Text			
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<h1>
-			A heading 
+			Welcome to Charlie's URL
 		</h1>
+		<h2>	
+			Welcome to my site
+		</h2>
 		<p>
-			Paragraph text.
+			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS. I like it alot
 		</p>
+		<footer>
+			@2015 Charlie Capadona- CMIS Web Design
+		</footer>
 	</body>
 </html>
