added a link to listsandlinks

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 			Title Text			
 		</title>
 		<meta charset="utf-8"/>
+		
 	</head>
 	<body>
+
+		
 		<h1>
 			Welcome to Charlie's URL
 		</h1>
@@ -19,5 +22,8 @@
 		<footer>
 			@2015 Charlie Capadona- CMIS Web Design
 		</footer>
+		<nav>
+			<a href="http://localhost:8000/listandlinks/">listandlinks</a>
+		</nav>
 	</body>
 </html>
