--- a/index.html
+++ b/index.html
@@ -26,4 +26,18 @@
 			<a href="http://localhost:8000/listandlinks/">listandlinks</a>
 		</nav>
 	</body>
+	<article>
+  <h1>Description of Lists and Links</h1>
+  <p>I created a folder called listsandlinks and made a new index.html inside the folder. Then I made 5 links with helpful websites that help you and me with web design. Then I made a link to my old index.html and on that html I made a link to the listandlinks website</p>
+	<ul>
+Create a new folder called "listsandlinks" in your repository folder.
+Inside listsandlinks create a file called "index.html" and a file called "main.css"
+In index.html create an ordered list of step by step instructions to create a new webpage on the production server.
+Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+In the nav section, create an unordered list of links with a link back to your main index page.
+In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".
+In your old index.html, add an article with a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements. 
+Turn in your work.
+	</ul>
+	</article>
 </html>
