editted my index.html

--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -2,23 +2,80 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			How to make a webpage
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
-		<header>
-			How to make a webpage
-		</header>
+		<h1>
+			How to create a webpage!
+		</h1>
 		<p>
-			<li>1. You create a html and a css</li> 				<li>2. Login into your sftp account or create one</li>
-			<li>3. To login into your sftp account you type sftp username@cmis-hsteacher</li>
-			<li>4. You get your html and css from your terminal to your sftp by typing .</li>
+		<ol>
+			<li>
+				You create a html and a css		
+			</li> 				
+			<li>	
+				Login into your sftp account or create one 			        </li>
+			<li>
+				 Do your coding that you have to do to the html, when you're done click save.
+			</li>
+			<li>
+				 When you are done, you can look at it on the development server by typing this command python -m SimpleHTTPServer
+			</li>
+			<li>
+				  To login into your sftp account you type sftp username@cmis-hsteacher
+			</li>
+			<li>
+				 You get your html and css from your terminal to your sftp by typing put (filename).
+			</li>
+			<li>
+				 Check that you uploaded the correct files.
+			</li>
+			<li>
+				 When you're done type the commit command which is commit -m "Your commit"
+			</li>
+			<li>
+				 Then when you are done with your commit, push the file to your repository.
+			</li>
+			<li>
+				 Type in your username and password and check your repository to make sure you have the file.
+			</li>
+	
 		<nav>
+			<ul>
+				<il>
+					<a href="charlie2477-cmis"> Cool webpage </a>
+			</ul>
+				</il>
+		</nav>
+		<ul>
+				<a href="unit4.htm"></a>
+		</ul>
+
 		</nav>
 		<main>
+		<ul>
+			<li>
+				<a href="http://www.w3schools.com/html/html_lists.asp">http://www.w3schools.com/html/html_lists.asp/</a>
+			</li>
+			<li>	
+				<a href="http://www.w3schools.com/html/html_head.asp">http://www.w3schools.com/html/html_head.asp/</a>
+			</li>
+			<li>
+				<a href="http://www.w3schools.com/html/html_links.asp">http://www.w3schools.com/html/html_links.asp/</a>
+			</li>
+			<li>
+				<a href="http://www.webdesign.org//">http://www.webdesign.org/</a>
+			</li>
+			<li>
+			<a href="https://en.wikipedia.org/wiki/Web_design/">https://en.wikipedia.org/wiki/Web_design/</a>
+			</li>
+				
+		<ul>
+		<a href="http://localhost:8000/index.html/">my main webpage</a>
+               </ul>
 		</main>
 		<footer>
 		</footer>		
 	</body>
-</html>
