editted the file

--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -73,7 +73,7 @@
 			</li>
 				
 		<ul>
-		<a href="http://localhost:8000/index.html/">my main webpage</a>
+		<a href="/../">my main webpage</a>
                </ul>
 		</main>
 		<footer>
