edited my index in tables

--- a/tables/index.html
+++ b/tables/index.html
@@ -16,6 +16,10 @@
 		<header>
 		</header>
 		<nav>
+			<li>	
+				<a href="https://cmis-hsteacher/~charlie2477/listandlinks/">My list and links webpage</a>
+				<a href="https://cmis-hsteacher/~charlie2477/tables/">My tables webpage</a>
+			</li>
 		</nav>
 		<main>
 		<table>
