--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			Title Text			
 		</title>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="box.css">
 		
 	</head>
 	<body>
