--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -5,6 +5,7 @@
 			How to make a webpage
 		</title>
 		<meta charset="utf-8"/>
+			<link rel="stylesheet" type="text/css" href="box.css">
 	</head>
 	<body>
 		<h1>
