--- a/tables/index.html
+++ b/tables/index.html
@@ -11,6 +11,7 @@
 			Simple Grid
 		</h2>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="box.css">
 	</head>
 	<body>
 		<header>
