--- a/tables/index.html
+++ b/tables/index.html
@@ -11,7 +11,7 @@
 			Simple Grid
 		</h2>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="box.css">
+		<link rel="stylesheet" type="text/css" href="css/box.css">
 	</head>
 	<body>
 		<header>
