--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -5,7 +5,7 @@
 			How to make a webpage
 		</title>
 		<meta charset="utf-8"/>
-			<link rel="stylesheet" type="text/css" href="css/box.css">
+			<link rel="stylesheet" type="text/css" href="../css/box.css">
 	</head>
 	<body>
 		<h1>
@@ -74,7 +74,7 @@
 			</li>
 				
 		<ul>
-		<a href="/../">my main webpage</a>
+		<a href="/cmis-hsteacher/charlie2477~">my main webpage</a>
                </ul>
 		</main>
 		<footer>
