--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<a href="http://localhost:8000/listandlinks/">listandlinks</a>
 		</nav>
 	</body>
+<body>
 <article>
   <h1>Description of Lists and Links</h1>
   <p>I created a folder called listsandlinks and made a new index.html inside the folder. Then I made 5 links with helpful websites that help you and me with web design. Then I made a link to my old index.html and on that html I made a link to the listandlinks website</p>
@@ -41,4 +42,5 @@ In your old index.html, add an article with a heading and a paragraph descriptio
 Turn in your work.
 	</ul>
 </article>
+</body>
 </html>
